--- a/bootiful-microservices-brixton/reservation-service/pom.xml
+++ b/bootiful-microservices-brixton/reservation-service/pom.xml
@@ -40,12 +40,10 @@
             <artifactId>spring-cloud-starter-eureka</artifactId>
         </dependency>
 
-        <!--
-
-
-
--->
-
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-security</artifactId>
+        </dependency>
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
